@@ -2,6 +2,11 @@ django-siteajax changelog
 =========================
 
 
+Unreleased
+----------
+* Fixed 'AjaxResponse' handling by 'ajax_dispatch'.
+
+
 v0.4.0 [2021-05-27]
 -------------------
 + Middleware is now optional in certain cases.
